feat(mybatis-xmlreload): 针对jdk8语法优化